--- a/WEEK6/0516DAY2/移动端知识点梳理.MD
+++ b/WEEK6/0516DAY2/移动端知识点梳理.MD
@@ -111,13 +111,109 @@
 
       filter
 
+    3.CSS3动画和变形(2D/3D)
 
+      //=>变形不是动画
+      transform:
+         translate(X|Y|Z)  位移
+         scale 缩放
+         rotate 旋转
+         skew 倾斜
+         matrix 矩阵(按照自己设定的矩阵公式实现变形)
+      transform-style:preserve-3d 实现3D变形
+      transform-origin：变形的起点
 
+      //=>过渡动画
+      transition:
+         transition-property:all/width... 哪些属性样式发生改变执行过渡动画效果，默认ALL，所有样式属性改变都会执行这个过渡效果
+         transition-duration:过渡动画的时间，我们一把都用秒，例如：.5s
+         transition-timing-function:动画运动的方式 linear(默认) ease ease-in ease-out ease-in-out cubic-bezier(执行自己设定的贝塞尔曲线)
+         transition-delay:设置延迟的时间,默认是0s不延迟,立即执行动画
+         ...
 
+      //=>帧动画
+      animation：
+         animation-name 运动轨迹的名称
+         animation-duration 运动的时长
+         animation-timing-function 运动的方式(默认ease)
+         animation-delay 延迟时间
+         animation-iteration-count 运动次数(默认1  infinite无限次运动)
+         animation-fill-mode 运动完成后的状态（帧动画完成后，元素会默认回到运动的起始位置，如果想让其停留在最后一帧的位置，设置这个属性值为forwards；backwards是当前帧动画如果有延迟时间，在延迟等待时间内，元素处于帧动画的第一帧位置；both是让帧动画同时具备forwards和backwards）
+         ...
 
+      //=>设置帧动画的运动轨迹
+      @keyframes [运动轨迹名称] {
+        from{
+           //开始的样式
+        }
+        to{
+           //结束的样式
+        }
+      }
+
+      @keyframes [运动轨迹名称] {
+         0%{
+            //开始的样式
+         }
+         50%{}
+         100%{
+            //结束的样式
+         }
+      }
+
+    4.CSS3中的新盒子模型
+      box-sizing: border-box / padding-box / content-box（默认值） 改变的就是我们在CSS中设置的WIDTH/HEIGHT到底代表啥  border-box让其代表整个盒子的宽高，当我们去修改PADDING或者BORDER，盒子大小不变，只会让内容缩放
+
+      columns：多列布局
+
+      flex：弹性盒子模型
+
+    5.一些其它的CSS3属性
+      perspective:视距 实现3D动画必用的属性
+      @media:媒体查询 实现响应式布局的一种方案
+      @font-face:导入字体图标
+      ...
 
 
 三、响应式布局开发
+   响应式布局：在不同尺寸的设备上都能良好的展示，这就是响应式布局设计（Responsive Layout）
+
+   公司中的产品形态：
+     1.PC端(全屏页面需要宽度自适应，但是一般都是固定宽度的)
+     2.PC+移动端用同一套项目（简单的页面，例如：产品介绍，公司展示类的官网等）
+     3.移动端（移动端设备尺寸差异较大，需要做响应式布局开发）
+       嵌入到APP中的H5
+       微信中分享出来的H5
+       微信公号
+       小程序
+       靠浏览器访问的H5
+       ...
+     4.RN(React Native) / ionic / cordova ... JS开发APP的框架，使用JS代码开发APP，最后框架会把代码转换为 安卓和IOS 需要的代码
+
+
+   如何实现响应式布局开发?
+     最常用的方案：REM等比缩放响应式布局
+
+     做移动端H5开发，首先加META标签
+        <!--meta:vp [Tab]-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        REM和PX一样都是样式单位，PX是固定单位，REM是相对单位（相对于当前页面根元素HTML的字体设定的单位）
+
+        我们开始给HTML的字体大小设置为100PX(1REM=100PX)，接下来我们写样式的时候，把所有的尺寸都用REM设定（测量出来的PX值/100就是应该设置的REM的值）,如果HTML的FONT-SIZE不变，用REM和PX一样，但是如果字体大小改变，也就是改变了REM和PX之间的换换算比例，那么之前所有用REM做单位的样式都会自动按照最新的比例进行缩放（实现了改动HTML的FONT-SIZE，整个页面中的元素都跟着缩放了，牵一发而动全身）
+
+        真实项目中，设计师给给我们一套设计稿（常用的尺寸：640*1136  750*1334 640*960 ...），拿到设计稿后，我们严格按照设计稿中的尺寸去编写样式
+           HTML{
+              FONT-SIZE:100PX;
+           }
+           接下来写样式，把测量出来的PX都除以100变为REM，所有的单位基于REM来搞
+           =>假设设计稿是750,也就相当于750的设备下,1REM=100PX
+
+        我们页面运行在320的设备上，我们需要修改HTML的字体大小，以此实现页面跟着整体缩放：320/750*100 =>当前设备上HTML的字体大小
+
+
+
+
 
 四、微信二次开发（小程序） =>Hybrid混合APP开发
 
