REACT脚手架高级使用

--- a/WEEK11/第一天笔记.MD
+++ b/WEEK11/第一天笔记.MD
@@ -91,16 +91,40 @@ React是FaceBook（脸书）公司研发的一款JS框架（MVC）
     如果当前的项目基于GIT管理，在执行eject的时候，如果还有没有提交到历史的区的内容，需要先提交到历史区，然后在eject才可以，否则报错：This git repository has untracked files or uncommitted changes...
 
     =>再去修改对应的配置项即可
+      一但暴露后，项目目录中多了两个文件夹：
+        config  存放的是webpack的配置文件
+           webpack.config.dev.js  开发环境下的配置项（yarn start）
+           webpack.config.prod.js  生产环境下的配置项（yarn build）
+
+        scripts 存放的是可执行脚本的JS文件
+           start.js   yarn start执行的就是这个JS
+           build.js   yarn build执行的就是这个JS
+
+      package.json中的内容也改了
+
+      【举个栗子：需要配置LESS】
+          $ yarn add less less-loader
+
+          less是开发和成产环境下都需要配置的
+
+          ```
+            {
+                test: /\.(css|less)$/,
+                use: [
+                    require.resolve('style-loader'),
+                    ...
+                    {
+                        loader: require.resolve('less-loader')
+                    }
+                ],
+            },
+          ```
 
    我们预览项目的时候，也是先基于webpack编译，把编译后的内容放到浏览器中运行，所以如果项目中使用了less，我们需要修改webpack配置项，在配置项中加入less的编译工作，这样后期预览项目，首先基于webpack把less编译为css，然后在呈现在页面中.
 
 
-
-
-
-
-
-
+   $ set HTTPS=true&&npm start   开启HTTPS协议模式（设置环境变量HTTPS的值）
+   $ set PORT=63341   修改端口号
 
 
 
