REACT中JSX语法渲染的原理

--- a/WEEK11/第一天笔记.MD
+++ b/WEEK11/第一天笔记.MD
@@ -126,6 +126,48 @@ React是FaceBook（脸书）公司研发的一款JS框架（MVC）
    $ set HTTPS=true&&npm start   开启HTTPS协议模式（设置环境变量HTTPS的值）
    $ set PORT=63341   修改端口号
 
+====================================
+
+二. react & react-dom
+
+  【渐进式框架】
+     一种最流行的框架设计思想，一般框架中都包含很多内容，这样导致框架的体积过于臃肿，拖慢加载的速度。真实项目中，我们使用一个框架，不一定用到所有的功能，此时我们应该把框架的功能进行拆分，用户想用什么，让其自己自由组合即可。
+
+     全家桶：渐进式框架N多部分的组合
+
+     VUE全家桶：vue-cli/vue/vue-router/vuex/axios(fetch)/vue element(vant)
+     REACT全家桶：create-react-app/react/react-dom/react-router/redux/react-redux/axios/ant/dva/saga/mobx...
+
+
+  1. react：REACT框架的核心部分，提供了Component类可以供我们进行组件开发，提供了钩子函数（生命周期函数：所有的生命周期函数都是基于回调函数完成的）
+
+  2. react-dom：把JSX语法（REACT独有的语法）渲染为真实DOM（能够放到页面中展示的结构都叫做真实的DOM）的组件
+
+===========================
+三、把JSX（虚拟DOM）变为真实的DOM
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
