--- a/WEEK11/第二天笔记.MD
+++ b/WEEK11/第二天笔记.MD
@@ -15,6 +15,21 @@
 
 
 
+> 知识点：
+> CREATE-ELEMENT在处理的时候，遇到一个组件，返回的对象中：TYPE就不在是字符串标签名了，而是一个函数（类），但是属性还是存在PROPS中
+```
+{
+  type:Dialog,
+  props:{
+     lx:1,
+     con:'xxx',
+     children:一个值或者一个数组
+  }
+}
+```
+> RENDER渲染的时候，我们需要做处理，首先判断TYPE的类型，如果是字符串，就创建一个元素标签，如果函数或者类，就把函数执行，把PROPS中的每一项（包含CHILDREN）传递给函数
+> 在执行函数的时候，把函数中RERURN的JSX转换为新的对象（通过CREATE-ELEMENT），把这个对象返回；紧接着RENDER按照以往的渲染方式，创建DOM元素，插入到指定的容器中即可
+
 
 
 
