组件的状态管理

--- a/WEEK11/第二天笔记.MD
+++ b/WEEK11/第二天笔记.MD
@@ -14,6 +14,15 @@
   SRC -> COMPONENT ：这个文件夹中存放的就是开发的组件
 
 
+2. 基于继承COMPONENT类来创建组件
+  基于CREATE-ELEMENT把JSX转换为一个对象，当RENDER渲染这个对象的时候，遇到TYPE是一个函数或者类，不是直接创建元素，而是先把方法执行：
+    ->如果是函数式声明的组件，就把它当做普通方法执行（方法中的THIS是UNDEFINED），把函数返回的JSX元素（也是解析后的对象）进行渲染
+    ->如果是类声明式的组件，会把当前类NEW它执行，创建类的一个实例（当前本次调取的组件就是它的实例），执行CONSTRUCTOR之后，会执行THIS.RENDER()，把RENDER中返回的JSX拿过来渲染，所以“类声明式组件，必须有一个RENDER的方法，方法中需要返回一个JSX元素”
+
+   但是不管是哪一种方式，最后都会把解析的出来的PROPS属性对象作为实参传递给对应的函数或者类
+
+
+
 
 > 知识点：
 > CREATE-ELEMENT在处理的时候，遇到一个组件，返回的对象中：TYPE就不在是字符串标签名了，而是一个函数（类），但是属性还是存在PROPS中
@@ -29,6 +38,29 @@
 ```
 > RENDER渲染的时候，我们需要做处理，首先判断TYPE的类型，如果是字符串，就创建一个元素标签，如果函数或者类，就把函数执行，把PROPS中的每一项（包含CHILDREN）传递给函数
 > 在执行函数的时候，把函数中RERURN的JSX转换为新的对象（通过CREATE-ELEMENT），把这个对象返回；紧接着RENDER按照以往的渲染方式，创建DOM元素，插入到指定的容器中即可
+
+
+===================================
+总结：创建组件有两种方式 “函数式”、“创建类式”
+
+  [函数式]
+     1. 操作非常简单
+     2. 能实现的功能也很简单，只是简单的调取和返回JSX而已
+
+  [创建类式]
+     1. 操作相对复杂一些，但是也可以实现更为复杂的业务功能
+     2. 能够使用生命周期函数操作业务
+     3. 函数式可以理解为静态组件（组件中的内容调取的时候就已经固定了，很难在修改），而类这种方式，可以基于组件内部的状态来动态更新渲染的内容
+     4. ...
+
+
+
+
+
+
+
+
+
 
 
 
