--- a/WEEK11/第四天笔记.MD
+++ b/WEEK11/第四天笔记.MD
@@ -195,24 +195,43 @@ REACT基础知识复习（二）：
 
 =================================
 REACT基础知识复习（三）：
+  1. 生命周期函数
 
+   【调取组件】
+      constructor
+      componentWillMount 第一次渲染之前
+      render 渲染
+      componentDidMount 第一次渲染之后
 
+   【组件重新渲染：内部状态改变、传递给组件的属性改变】
+     状态改变：
+       shouldComponentUpdate
+          =>是否允许组件更新：返回TRUE是允许，返回FALSE则不再继续向下走
+       componentWillUpdate
+          =>更新之前：和SHOULD一样，方法中通过this.state.xxx获取的还是更新前的状态信息，方法有两个参数：nextProps/nextState存储的是最新的属性和状态信息
+       render 更新
+       componentDidUpdate 更新之后
 
+     属性改变：
+       componentWillReceiveProps(nextProps/nextState)
+         =>接收最新属性之前，基于this.props.xxx获取的是原有的属性信息，nextProps存储的是最新传递的属性信息
+       shouldComponentUpdate  是否允许组件更新
+       componentWillUpdate  更新之前
+       render 更新
+       componentDidUpdate 更新之后
 
+  【组件销毁】
+     componentWillUnmount  组件销毁之前
 
+  =====
 
+  组件的属性是只读的：只能调取组件时候传递进来，不能自己在组件内部修改（但是可以设置默认值和规则）
 
+  组件的状态是可读写的：状态改变会引发组件的重新更新（状态是基于setState改变）
 
+  组件实例上可以放一些信息：这些信息只是为了方便在组件内任意方法中获取和使用的
 
+  实例上挂载的REFS：就是用来操作DOM的
 
-
-
-
-
-
-
-
-
-
-
+  实例上挂载的context：是用来实现组件之间信息传递的
 
