--- a/WEEK11/第五天笔记.MD
+++ b/WEEK11/第五天笔记.MD
@@ -49,3 +49,24 @@
 
 
 2. 平行组件：兄弟组件或者毫无关系的两个组件
+
+  方案一：让两个平行组件拥一个共同的父组件
+     父：Parent
+     子：A / B
+     父组件中有一些信息，父组件把一个方法传递给A，A中把方法执行（方法执行修改父组件信息值），父组件再把最新的信息传递给B即可，等价于A操作，影响了B
+
+
+  方案二：基于REDUX来进行状态管理，实现组件之间的信息传输（常用方案）
+     REDUX可以应用在任何的项目中（VUE/JQ/RERACT的都可以），REACT-REDUX才是专门给REACT项目提供的方案
+
+
+
+
+
+
+
+
+
+
+
+
