--- a/WEEK12/KETANG/项目中遇到的问题.MD
+++ b/WEEK12/KETANG/项目中遇到的问题.MD
@@ -34,7 +34,7 @@
 5. 实现购物车的流程
 
   [点击加入购物车]
-     1. 向服务器发送请求，让服务器存储当前新加的信息（为了防止页面刷新，购物车信息消失：REDUX中的信息在页面刷新后就没有了）
+     1. 向服务器发送请求，让服务器存储当前新加的信息（为了防止页面刷新，购物车信息消失：REDUX中的信息在页面刷新后就没有了； 可以跨平台(前提是用户已经登录)；）
 
      2. 当服务器返回存储成功后，我们把信息往REDUX中存储一份（建议最好是：从服务器获取我的购物车信息，存储到REDUX中）
        ->存储到REDUX中，目的是以后切换到我的购物车页面，没必要总是从服务器获取，从REDUX获取也可以，提高性能
