--- a/WEEK12/KETANG/项目中遇到的问题.MD
+++ b/WEEK12/KETANG/项目中遇到的问题.MD
@@ -39,3 +39,21 @@
      2. 当服务器返回存储成功后，我们把信息往REDUX中存储一份（建议最好是：从服务器获取我的购物车信息，存储到REDUX中）
        ->存储到REDUX中，目的是以后切换到我的购物车页面，没必要总是从服务器获取，从REDUX获取也可以，提高性能
        ->之所以是从服务器获取信息存储到REDUX中，因为服务器的信息是最准确的，即使页面刷新了，即使某些操作我们忘记向REDUX中存储了，每一次派发都可以获取最新的信息（只要你向服务器发送了即可）
+
+6. 实现全选和非全选等
+  [全选]
+    现在的项目都是数据驱动（点击复选框也会是把数据中的选中信息更新，从而更新组件让其有选中或非选中的效果） =>当前案例操作的是REDUX中UNPAY里面的数据
+    1.先把REDUX->UNPAY中的每一个商品信息额外增加一个属性，记录是否被选中（默认都是被选中的），还要有一个属性记录全选或者全不选的操作
+    2.编写一个DISPATCH任务，用来控制哪些课程需要被选中或者不选中（包含全选和全不选）
+
+
+
+
+
+
+
+
+
+
+
+
