--- a/WEEK12/KETANG/项目中遇到的问题.MD
+++ b/WEEK12/KETANG/项目中遇到的问题.MD
@@ -46,6 +46,12 @@
     1.先把REDUX->UNPAY中的每一个商品信息额外增加一个属性，记录是否被选中（默认都是被选中的），还要有一个属性记录全选或者全不选的操作
     2.编写一个DISPATCH任务，用来控制哪些课程需要被选中或者不选中（包含全选和全不选）
 
+  [删除]
+    首先在所有数据中找出选中的那些项，分别执行API：removeShopCart(courseID)这个方法，等到删除操作完成（所有的删除操作都完成了），我们重新从服务器获取最新的购物车信息，更新REDUX中的状态（DISPATCH：queryUnpay），REDUX信息更新，页面重新渲染
+
+  [支付]
+    类似于删除(支付之前需要先登录)
+
 
 
 
